# fasttext

./: .gitignore  .golangci.yml  BUILD.bazel  CHANGELOG.md  MODULE.bazel  Makefile  analog.go  bazel-bin  bazel-fasttext  bazel-out  bazel-testlogs  cbits.cpp  cbits.h  fasttext.cpp  fasttext.go  fasttext_test.go  fasttextlib.cpp  ft.cpp  go.mod  go.sum  handle.cpp  helpers.go  main.go  prediction.cpp  prediction.go  predictions.cpp  predictions.h
.github/workflows/: build.yml  lint.yml  test.yml
cli/: main.go
cmd/: analogy.go  predict.go  sentence.go  wordvec.go
evaluation_go/: evaluate.go
fasttext/: BUILD.bazel  dictionary.cc  dictionary.h  fasttext.cc  fasttext.h  fullprediction.h
fasttext/include/: dictionary.h  fasttext.h  fullprediction.h
fasttext/src/: autotune.cc  dictionary.cc  fasttext.cc
