load("@gazelle//:def.bzl", "gazelle")
load("@rules_cc//cc:defs.bzl", "cc_library")
load("@rules_go//go:def.bzl", "go_library", "go_test")

# gazelle:prefix github.com/yunacaba/fasttext
gazelle(name = "gazelle")

cc_library(
    name = "fasttext_cc_lib",
    srcs = [
        "handle.cpp",
        "prediction.cpp",
        "predictions.cpp",
    ],
    hdrs = ["predictions.h"],
    copts = [
        "-std=c++17",
        "-O3",
        "-ffast-math",
        "-fPIC",
        "-pthread",
        "-Wno-defaulted-function-deleted",
    ],
    deps = ["//fasttext:fasttext_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "fasttext_go_lib",
    srcs = [
        "analog.go",
        "fasttext.go",
        "helpers.go",
        "prediction.go",
    ],
    cgo = True,
    importpath = "github.com/yunacaba/fasttext",
    visibility = ["//visibility:public"],
    cdeps = [":fasttext_cc_lib"],
)

go_test(
    name = "fasttext_test",
    srcs = ["fasttext_test.go"],
    embed = [":fasttext_go_lib"],
    data = glob(["testdata/**"]),
    deps = ["@com_github_stretchr_testify//require"],
)
